# nrf-lte-test-embassy

./: .gitignore  Cargo.toml  memory.x
.cargo/: config.toml
src/: main.rs  secrets.rs
